--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,18 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>ele-app</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link
+      href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      rel="stylesheet"
+    />
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=61759b871028ea8c0d697ab69e8ea9df"></script> 
+    <style>
+      html, body{
+        width:100%;
+        height:100%
+      }
+    </style>
   </head>
   <body>
     <noscript>
